parser/cool.output
Terminals unused in grammar

    ERROR


State 121 conflicts: 9 shift/reduce
State 132 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    6 feature_list: %empty
    7             | feature_list feature ';'

    8 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}'
    9        | OBJECTID ':' TYPEID ASSIGN expression
   10        | OBJECTID ':' TYPEID

   11 formal_list: %empty
   12            | formal
   13            | formal_list ',' formal

   14 formal: OBJECTID ':' TYPEID

   15 expression_block: expression ';'
   16                 | expression_block expression ';'

   17 expression_list: %empty
   18                | expression
   19                | expression_list ',' expression

   20 case_list: case
   21          | case_list case

   22 case: OBJECTID ':' TYPEID DARROW expression ';'

   23 case_expression: CASE expression OF case_list ESAC

   24 expression: OBJECTID ASSIGN expression
   25           | expression '@' TYPEID '.' OBJECTID '(' expression_list ')'
   26           | expression '.' OBJECTID '(' expression_list ')'
   27           | OBJECTID '(' expression_list ')'
   28           | IF expression THEN expression FI
   29           | IF expression THEN expression ELSE expression FI
   30           | WHILE expression LOOP expression POOL
   31           | '{' expression_block '}'
   32           | LET let_expression
   33           | case_expression
   34           | NEW TYPEID
   35           | ISVOID expression
   36           | expression '+' expression
   37           | expression '-' expression
   38           | expression '*' expression
   39           | expression '/' expression
   40           | '~' expression
   41           | expression '<' expression
   42           | expression LE expression
   43           | expression '=' expression
   44           | NOT expression
   45           | '(' expression ')'
   46           | OBJECTID
   47           | INT_CONST
   48           | BOOL_CONST
   49           | STR_CONST

   50 let_expression: OBJECTID ':' TYPEID IN expression
   51               | OBJECTID ':' TYPEID ASSIGN expression IN expression
   52               | OBJECTID ':' TYPEID ',' let_expression
   53               | OBJECTID ':' TYPEID ASSIGN expression ',' let_expression


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 8 25 26 27 45
    ')' (41) 8 25 26 27 45
    '*' (42) 38
    '+' (43) 36
    ',' (44) 13 19 52 53
    '-' (45) 37
    '.' (46) 25 26
    '/' (47) 39
    ':' (58) 8 9 10 14 22 50 51 52 53
    ';' (59) 4 5 7 15 16 22
    '<' (60) 41
    '=' (61) 43
    '@' (64) 25
    '{' (123) 4 5 8 31
    '}' (125) 4 5 8 31
    '~' (126) 40
    error (256)
    CLASS (258) 4 5
    ELSE (259) 29
    FI (260) 28 29
    IF (261) 28 29
    IN (262) 50 51
    INHERITS (263) 5
    LET (264) 32
    LOOP (265) 30
    POOL (266) 30
    THEN (267) 28 29
    WHILE (268) 30
    CASE (269) 23
    ESAC (270) 23
    OF (271) 23
    DARROW (272) 22
    NEW (273) 34
    ISVOID (274) 35
    STR_CONST <symbol> (275) 49
    INT_CONST <symbol> (276) 47
    BOOL_CONST <boolean> (277) 48
    TYPEID <symbol> (278) 4 5 8 9 10 14 22 25 34 50 51 52 53
    OBJECTID <symbol> (279) 8 9 10 14 22 24 25 26 27 46 50 51 52 53
    ASSIGN (280) 9 24 51 53
    NOT (281) 44
    LE (282) 42
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3
        on right: 1 3
    class <class_> (48)
        on left: 4 5
        on right: 2 3
    feature_list <features> (49)
        on left: 6 7
        on right: 4 5 7
    feature <feature> (50)
        on left: 8 9 10
        on right: 7
    formal_list <formals> (51)
        on left: 11 12 13
        on right: 8 13
    formal <formal> (52)
        on left: 14
        on right: 12 13
    expression_block <expressions> (53)
        on left: 15 16
        on right: 16 31
    expression_list <expressions> (54)
        on left: 17 18 19
        on right: 19 25 26 27
    case_list <cases> (55)
        on left: 20 21
        on right: 21 23
    case <case_> (56)
        on left: 22
        on right: 20 21
    case_expression <expression> (57)
        on left: 23
        on right: 33
    expression <expression> (58)
        on left: 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49
        on right: 8 9 15 16 18 19 22 23 24 25 26 28 29 30 35 36 37 38 39 40 41 42 43 44 45 50 51 53
    let_expression <expression> (59)
        on left: 50 51 52 53
        on right: 32 52 53


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 7


State 4

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 5

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 8
    '{'       shift, and go to state 9


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 8

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 10


State 9

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 6 (feature_list)

    feature_list  go to state 11


State 10

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 12


State 11

    4 class: CLASS TYPEID '{' feature_list . '}' ';'
    7 feature_list: feature_list . feature ';'

    OBJECTID  shift, and go to state 13
    '}'       shift, and go to state 14

    feature  go to state 15


State 12

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 6 (feature_list)

    feature_list  go to state 16


State 13

    8 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expression '}'
    9        | OBJECTID . ':' TYPEID ASSIGN expression
   10        | OBJECTID . ':' TYPEID

    '('  shift, and go to state 17
    ':'  shift, and go to state 18


State 14

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 19


State 15

    7 feature_list: feature_list feature . ';'

    ';'  shift, and go to state 20


State 16

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    7 feature_list: feature_list . feature ';'

    OBJECTID  shift, and go to state 13
    '}'       shift, and go to state 21

    feature  go to state 15


State 17

    8 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expression '}'

    OBJECTID  shift, and go to state 22

    $default  reduce using rule 11 (formal_list)

    formal_list  go to state 23
    formal       go to state 24


State 18

    9 feature: OBJECTID ':' . TYPEID ASSIGN expression
   10        | OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 25


State 19

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 20

    7 feature_list: feature_list feature ';' .

    $default  reduce using rule 7 (feature_list)


State 21

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 26


State 22

   14 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 27


State 23

    8 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expression '}'
   13 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 28
    ','  shift, and go to state 29


State 24

   12 formal_list: formal .

    $default  reduce using rule 12 (formal_list)


State 25

    9 feature: OBJECTID ':' TYPEID . ASSIGN expression
   10        | OBJECTID ':' TYPEID .

    ASSIGN  shift, and go to state 30

    $default  reduce using rule 10 (feature)


State 26

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 27

   14 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 31


State 28

    8 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expression '}'

    ':'  shift, and go to state 32


State 29

   13 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 22

    formal  go to state 33


State 30

    9 feature: OBJECTID ':' TYPEID ASSIGN . expression

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    case_expression  go to state 48
    expression       go to state 49


State 31

   14 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 14 (formal)


State 32

    8 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expression '}'

    TYPEID  shift, and go to state 50


State 33

   13 formal_list: formal_list ',' formal .

    $default  reduce using rule 13 (formal_list)


State 34

   28 expression: IF . expression THEN expression FI
   29           | IF . expression THEN expression ELSE expression FI

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    case_expression  go to state 48
    expression       go to state 51


State 35

   32 expression: LET . let_expression

    OBJECTID  shift, and go to state 52

    let_expression  go to state 53


State 36

   30 expression: WHILE . expression LOOP expression POOL

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    case_expression  go to state 48
    expression       go to state 54


State 37

   23 case_expression: CASE . expression OF case_list ESAC

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    case_expression  go to state 48
    expression       go to state 55


State 38

   34 expression: NEW . TYPEID

    TYPEID  shift, and go to state 56


State 39

   35 expression: ISVOID . expression

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    case_expression  go to state 48
    expression       go to state 57


State 40

   49 expression: STR_CONST .

    $default  reduce using rule 49 (expression)


State 41

   47 expression: INT_CONST .

    $default  reduce using rule 47 (expression)


State 42

   48 expression: BOOL_CONST .

    $default  reduce using rule 48 (expression)


State 43

   24 expression: OBJECTID . ASSIGN expression
   27           | OBJECTID . '(' expression_list ')'
   46           | OBJECTID .

    ASSIGN  shift, and go to state 58
    '('     shift, and go to state 59

    $default  reduce using rule 46 (expression)


State 44

   44 expression: NOT . expression

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    case_expression  go to state 48
    expression       go to state 60


State 45

   40 expression: '~' . expression

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    case_expression  go to state 48
    expression       go to state 61


State 46

   31 expression: '{' . expression_block '}'

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    expression_block  go to state 62
    case_expression   go to state 48
    expression        go to state 63


State 47

   45 expression: '(' . expression ')'

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    case_expression  go to state 48
    expression       go to state 64


State 48

   33 expression: case_expression .

    $default  reduce using rule 33 (expression)


State 49

    9 feature: OBJECTID ':' TYPEID ASSIGN expression .
   25 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   26           | expression . '.' OBJECTID '(' expression_list ')'
   36           | expression . '+' expression
   37           | expression . '-' expression
   38           | expression . '*' expression
   39           | expression . '/' expression
   41           | expression . '<' expression
   42           | expression . LE expression
   43           | expression . '=' expression

    LE   shift, and go to state 65
    '<'  shift, and go to state 66
    '='  shift, and go to state 67
    '+'  shift, and go to state 68
    '-'  shift, and go to state 69
    '*'  shift, and go to state 70
    '/'  shift, and go to state 71
    '@'  shift, and go to state 72
    '.'  shift, and go to state 73

    $default  reduce using rule 9 (feature)


State 50

    8 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expression '}'

    '{'  shift, and go to state 74


State 51

   25 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   26           | expression . '.' OBJECTID '(' expression_list ')'
   28           | IF expression . THEN expression FI
   29           | IF expression . THEN expression ELSE expression FI
   36           | expression . '+' expression
   37           | expression . '-' expression
   38           | expression . '*' expression
   39           | expression . '/' expression
   41           | expression . '<' expression
   42           | expression . LE expression
   43           | expression . '=' expression

    THEN  shift, and go to state 75
    LE    shift, and go to state 65
    '<'   shift, and go to state 66
    '='   shift, and go to state 67
    '+'   shift, and go to state 68
    '-'   shift, and go to state 69
    '*'   shift, and go to state 70
    '/'   shift, and go to state 71
    '@'   shift, and go to state 72
    '.'   shift, and go to state 73


State 52

   50 let_expression: OBJECTID . ':' TYPEID IN expression
   51               | OBJECTID . ':' TYPEID ASSIGN expression IN expression
   52               | OBJECTID . ':' TYPEID ',' let_expression
   53               | OBJECTID . ':' TYPEID ASSIGN expression ',' let_expression

    ':'  shift, and go to state 76


State 53

   32 expression: LET let_expression .

    $default  reduce using rule 32 (expression)


State 54

   25 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   26           | expression . '.' OBJECTID '(' expression_list ')'
   30           | WHILE expression . LOOP expression POOL
   36           | expression . '+' expression
   37           | expression . '-' expression
   38           | expression . '*' expression
   39           | expression . '/' expression
   41           | expression . '<' expression
   42           | expression . LE expression
   43           | expression . '=' expression

    LOOP  shift, and go to state 77
    LE    shift, and go to state 65
    '<'   shift, and go to state 66
    '='   shift, and go to state 67
    '+'   shift, and go to state 68
    '-'   shift, and go to state 69
    '*'   shift, and go to state 70
    '/'   shift, and go to state 71
    '@'   shift, and go to state 72
    '.'   shift, and go to state 73


State 55

   23 case_expression: CASE expression . OF case_list ESAC
   25 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   26           | expression . '.' OBJECTID '(' expression_list ')'
   36           | expression . '+' expression
   37           | expression . '-' expression
   38           | expression . '*' expression
   39           | expression . '/' expression
   41           | expression . '<' expression
   42           | expression . LE expression
   43           | expression . '=' expression

    OF   shift, and go to state 78
    LE   shift, and go to state 65
    '<'  shift, and go to state 66
    '='  shift, and go to state 67
    '+'  shift, and go to state 68
    '-'  shift, and go to state 69
    '*'  shift, and go to state 70
    '/'  shift, and go to state 71
    '@'  shift, and go to state 72
    '.'  shift, and go to state 73


State 56

   34 expression: NEW TYPEID .

    $default  reduce using rule 34 (expression)


State 57

   25 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   26           | expression . '.' OBJECTID '(' expression_list ')'
   35           | ISVOID expression .
   36           | expression . '+' expression
   37           | expression . '-' expression
   38           | expression . '*' expression
   39           | expression . '/' expression
   41           | expression . '<' expression
   42           | expression . LE expression
   43           | expression . '=' expression

    '@'  shift, and go to state 72
    '.'  shift, and go to state 73

    $default  reduce using rule 35 (expression)


State 58

   24 expression: OBJECTID ASSIGN . expression

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    case_expression  go to state 48
    expression       go to state 79


State 59

   27 expression: OBJECTID '(' . expression_list ')'

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    $default  reduce using rule 17 (expression_list)

    expression_list  go to state 80
    case_expression  go to state 48
    expression       go to state 81


State 60

   25 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   26           | expression . '.' OBJECTID '(' expression_list ')'
   36           | expression . '+' expression
   37           | expression . '-' expression
   38           | expression . '*' expression
   39           | expression . '/' expression
   41           | expression . '<' expression
   42           | expression . LE expression
   43           | expression . '=' expression
   44           | NOT expression .

    LE   shift, and go to state 65
    '<'  shift, and go to state 66
    '='  shift, and go to state 67
    '+'  shift, and go to state 68
    '-'  shift, and go to state 69
    '*'  shift, and go to state 70
    '/'  shift, and go to state 71
    '@'  shift, and go to state 72
    '.'  shift, and go to state 73

    $default  reduce using rule 44 (expression)


State 61

   25 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   26           | expression . '.' OBJECTID '(' expression_list ')'
   36           | expression . '+' expression
   37           | expression . '-' expression
   38           | expression . '*' expression
   39           | expression . '/' expression
   40           | '~' expression .
   41           | expression . '<' expression
   42           | expression . LE expression
   43           | expression . '=' expression

    '@'  shift, and go to state 72
    '.'  shift, and go to state 73

    $default  reduce using rule 40 (expression)


State 62

   16 expression_block: expression_block . expression ';'
   31 expression: '{' expression_block . '}'

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '}'         shift, and go to state 82
    '('         shift, and go to state 47

    case_expression  go to state 48
    expression       go to state 83


State 63

   15 expression_block: expression . ';'
   25 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   26           | expression . '.' OBJECTID '(' expression_list ')'
   36           | expression . '+' expression
   37           | expression . '-' expression
   38           | expression . '*' expression
   39           | expression . '/' expression
   41           | expression . '<' expression
   42           | expression . LE expression
   43           | expression . '=' expression

    LE   shift, and go to state 65
    '<'  shift, and go to state 66
    '='  shift, and go to state 67
    '+'  shift, and go to state 68
    '-'  shift, and go to state 69
    '*'  shift, and go to state 70
    '/'  shift, and go to state 71
    '@'  shift, and go to state 72
    '.'  shift, and go to state 73
    ';'  shift, and go to state 84


State 64

   25 expression: expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   26           | expression . '.' OBJECTID '(' expression_list ')'
   36           | expression . '+' expression
   37           | expression . '-' expression
   38           | expression . '*' expression
   39           | expression . '/' expression
   41           | expression . '<' expression
   42           | expression . LE expression
   43           | expression . '=' expression
   45           | '(' expression . ')'

    LE   shift, and go to state 65
    '<'  shift, and go to state 66
    '='  shift, and go to state 67
    '+'  shift, and go to state 68
    '-'  shift, and go to state 69
    '*'  shift, and go to state 70
    '/'  shift, and go to state 71
    '@'  shift, and go to state 72
    '.'  shift, and go to state 73
    ')'  shift, and go to state 85


State 65

   42 expression: expression LE . expression

    IF          shift, and go to state 34
    LET         shift, and go to state 35
    WHILE       shift, and go to state 36
    CASE        shift, and go to state 37
    NEW         shift, and go to state 38
    ISVOID      shift, and go to state 39
    STR_CONST   shift, and go to state 40
    INT_CONST   shift, and go to state 41
    BOOL_CONST  shift, and go to state 42
    OBJECTID    shift, and go to state 43
    NOT         shift, and go to state 44
    '~'         shift, and go to state 45
    '{'         shift, and go to state 46
    '('         shift, and go to state 47

    case_expression  go to state 48
    expression       go to state 86


State 66

   41 expression: expression '<' . expression
